--- a/app/src/main/res/layout/fragment_frg_sach.xml
+++ b/app/src/main/res/layout/fragment_frg_sach.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_height="match_parent"
+
     tools:context=".fragment.frg_sach">
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/sv"
+        app:iconifiedByDefault="false"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:queryHint="seach hear"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,8 +27,8 @@
         android:id="@+id/fltbtnsach"
         android:src="@drawable/add"
         android:layout_gravity="bottom|end"
+        android:layout_marginTop="-70dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
         />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
